Your commit message

--- a/company.G03.PL/Views/Department/Index.cshtml
+++ b/company.G03.PL/Views/Department/Index.cshtml
@@ -18,7 +18,7 @@
 </div>
 
 
-<div class="alert alert-info">
+<div class="alert alert-success vh-100">
     <h2>Welcome to Departments Management System</h2>
     <p>Here you can manage all your Departments.</p>
 
