--- a/company.G03.PL/Views/Home/Index.cshtml
+++ b/company.G03.PL/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<div class="alert alert-info vw-100 vh-100"> 
+<div class="alert alert-success vw-100 vh-100"> 
 	<div class="text-center">
 		<h1 class="display-4">Welcome</h1>
 		<p>Welcome to the Company Management System</p>
