--- a/company.G03.PL/Views/Shared/_Layout.cshtml
+++ b/company.G03.PL/Views/Shared/_Layout.cshtml
@@ -32,7 +32,17 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+
                     </ul>
+                    @if(User.Identity.IsAuthenticated)
+                    {
+                        <a class="btn btn-danger" asp-area="" asp-controller="Auth" asp-action="Logout">Logout</a>
+
+                    }
+                    else
+					{
+						<a class="nav-link text-dark" asp-area="" asp-controller="Auth" asp-action="Login">Login</a>
+					}
                 </div>
             </div>
         </nav>
