--- a/company.G03.PL/Views/Department/Create.cshtml
+++ b/company.G03.PL/Views/Department/Create.cshtml
@@ -20,5 +20,6 @@
 @section Scripts
 {
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+	<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
 }
