--- a/company.G03.PL/Views/Department/Delete.cshtml
+++ b/company.G03.PL/Views/Department/Delete.cshtml
@@ -70,5 +70,5 @@
 @section Scripts
             {
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+	<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 }
