--- a/company.G03.PL/Views/Empeloyee/Create.cshtml
+++ b/company.G03.PL/Views/Empeloyee/Create.cshtml
@@ -22,5 +22,5 @@
 @section Scripts 
 {
 	<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-	<script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+	<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 }
