--- a/company.G03.PL/Views/Empeloyee/Details.cshtml
+++ b/company.G03.PL/Views/Empeloyee/Details.cshtml
@@ -4,6 +4,17 @@
 }
 
 <h1 class="my-5 w-75">Employee Details</h1>
+<div class="text-center">
+    @if(string.IsNullOrEmpty(Model.ImageName))
+    {
+        <img class="rounded-circle img-fluid " src="~/files/images/defulte.png" alt="Alternate Text" style="max-width:200px ; max-height:200px ;aspect-ratio:1/1;" />
+    }
+    else{
+        <img class="rounded-circle img-fluid " src="~/files/images/@Model.ImageName" alt="Alternate Text" style="max-width:200px ; max-height:200px ;aspect-ratio:1/1;" />
+
+    }
+
+</div>
 <ul class="nav nav-tabs" id="employeeTabs" role="tablist">
     <li class="nav-item" role="presentation">
         <a class="nav-link active" id="general-tab" data-bs-toggle="tab" href="#general" role="tab" aria-controls="general" aria-selected="true">General</a>
