--- a/company.G03.PL/Views/Empeloyee/Edit.cshtml
+++ b/company.G03.PL/Views/Empeloyee/Edit.cshtml
@@ -9,7 +9,7 @@
 
 <div class="row justify-content-center align-content-center mt-3">
     <h1 class="col-8 my-4">Edit Employee</h1>
-    <form method="post" asp-controller="Empeloyee" asp-action="Edit" class="row col-8">
+    <form method="post" asp-controller="Empeloyee" asp-action="Edit" class="row col-8" enctype="multipart/form-data">
         <div asp-validation-summary="ModelOnly"></div>
         <partial name="Partial/CreateEditPartialView">
 
@@ -22,5 +22,5 @@
 @section Scripts
 {
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+	<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script> 
 }
