--- a/company.G03.PL/Views/Empeloyee/Index.cshtml
+++ b/company.G03.PL/Views/Empeloyee/Index.cshtml
@@ -19,7 +19,7 @@
 
 
 <br />
-<div class="alert alert-info">
+<div class="alert alert-success vh-100">
 	<h2>Welcome to Employee Management System</h2>
 	<p>Here you can manage all your employees.</p>
 <br />
@@ -42,6 +42,7 @@
     <table class="table table-striped table-hover mt-3">
         <thead class="text-center">
             <tr>
+                <th>@Html.DisplayNameFor(e=>e.ImageName)</th>
                 <th>@Html.DisplayNameFor(e => e.Name)</th>
                 <th>@Html.DisplayNameFor(e => e.Email)</th>
                 <th>@Html.DisplayNameFor(e => e.EmployeeType)</th>
@@ -59,8 +60,18 @@
         <tbody class="text-center">
             @foreach (var employee in Model)
             {
-                <tr>
+                <tr class="align-middle">
+                        <td class="">
+                            @if (string.IsNullOrEmpty(employee.ImageName))
+                            {
+                                <img class="rounded-circle img-fluid " src="~/files/images/defulte.png" alt="Alternate Text" style="max-width:80px ; max-height:80px ;aspect-ratio:1/1;" />
+                            }
+                            else
+                            {
+                                <img class="rounded-circle img-fluid " src="~/files/images/@employee.ImageName" alt="Alternate Text" style="max-width:80px ; max-height:80px ;aspect-ratio:1/1;" />
 
+                            }
+                        </td>
                     <td>@employee.Name</td>
                     <td>@employee.Email</td>
                     <td>@employee.EmployeeType</td>
@@ -68,11 +79,11 @@
                     <td>@Html.DisplayFor(e=>employee.Salary)</td>
                     <td>@if (employee.IsActive)
                         {
-                            <i class="fa-solid fa-circle-check text-success" ></i>
+                                <i class="fa-solid fa-user text-success" style="font-size:30px;"></i>
                         }
                         else
                         {
-                            <i class="fa-solid fa-circle-xmark text-danger" ></i>
+                                <i class="fa-solid fa-user text-danger" style="font-size:30px;"></i>
                         }
                     </td>
                     <td>@employee.Gender</td>
