--- a/company.G03.PL/Views/Empeloyee/Partial/CreateEditPartialView.cshtml
+++ b/company.G03.PL/Views/Empeloyee/Partial/CreateEditPartialView.cshtml
@@ -5,12 +5,31 @@
 @inject IDepartmentService _departmentService
 @model EmployeeModelView
 @{
-    var departments = new SelectList(_departmentService.GetAllDepatment(), nameof(DepatmentDTO.ID), nameof(DepatmentDTO.Name));
+
+        var departments = new SelectList(_departmentService.GetAllDepatment(), nameof(DepatmentDTO.ID), nameof(DepatmentDTO.Name));  
 }
 <div class="form-group mb-3 col-6">
     <label class="form-label" asp-for="Name"></label>
     <input asp-for="Name" class="form-control" />
     <span asp-validation-for="Name" class="text-danger"></span>
+</div>
+<div class="form-group mb-3 col-6 d-flex gap-2">
+    
+        
+    <div class=" ">
+        @if (Model != null && !string.IsNullOrEmpty(Model.ImageName))
+        {
+            <img class="rounded-circle img-fluid " src="~/files/images/@Model.ImageName" alt="Alternate Text"
+                 style="max-width:70px ; max-height:70px ;aspect-ratio:1/1;" />
+        }
+      
+    </div>
+        <div class=" align-content-center w-100">
+            <input asp-for="Image" class="form-control " />
+        <input asp-for="ImageName" class="form-control " hidden readonly />
+
+        </div>
+    
 </div>
 <div class="form-group mb-3 col-6">
     <label class="form-label" asp-for="Email"></label>
@@ -43,11 +62,6 @@
     <span asp-validation-for="Salary" class="text-danger"></span>
 </div>
 <div class="form-group mb-3 col-6">
-    <input asp-for="IsActive" class="" />
-    <label class="col-form-label" asp-for="IsActive"></label>
-</div>
-
-<div class="form-group mb-3 col-6">
     <label class="form-label" asp-for="DepartmentId"></label>
     <select class="form-control" asp-for="DepartmentId" asp-items="departments">
         <option value="@null">Choose Department</option>
@@ -69,4 +83,8 @@
             <label class="form-check-label ">@genderopation</label>
         </div>
     }
+</div>
+<div class="form-group mb-3 col-6">
+    <input asp-for="IsActive" class="form-check-input" />
+    <label class="col-form-label" asp-for="IsActive"></label>
 </div>
