--- a/company.G03.PL/wwwroot/css/site.css
+++ b/company.G03.PL/wwwroot/css/site.css
@@ -20,3 +20,10 @@ html {
 body {
   margin-bottom: 60px;
 }
+.divider:after,
+.divider:before {
+    content: "";
+    flex: 1;
+    height: 1px;
+    background: #eee;
+}
