--- a/company.G03.PL/Views/Auth/Login.cshtml
+++ b/company.G03.PL/Views/Auth/Login.cshtml
@@ -33,7 +33,7 @@
                             <input asp-for="RememberMe" class="form-check-input"/>
                             <label asp-for="RememberMe" class="form-check-label"> Remember me </label>
                         </div>
-                        <a href="#!">Forgot password?</a>
+                        <a asp-action="ResetPassword">Forgot password?</a>
                     </div>
 
                     <!-- Submit button -->
