--- a/company.G03.PL/Views/Shared/_Layout.cshtml
+++ b/company.G03.PL/Views/Shared/_Layout.cshtml
@@ -9,30 +9,26 @@
     <link rel="stylesheet" href="~/company.G03.PL.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">company.G03</a>
+<body class="bg-dark">
+    <header class="text-white">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  text-white  bg-black">
+            <div class="container-fluid text-white">
+                <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">company.G03</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex-grow-1 text-white">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-white " asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Department" asp-action="Index">Department</a>
+                            <a class="nav-link text-white " asp-area="" asp-controller="Department" asp-action="Index">Department</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Empeloyee" asp-action="Index">Empeloyee</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Empeloyee" asp-action="Index">Empeloyee</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-
                     </ul>
                     @if(User.Identity.IsAuthenticated)
                     {
@@ -41,23 +37,17 @@
                     }
                     else
 					{
-						<a class="nav-link text-dark" asp-area="" asp-controller="Auth" asp-action="Login">Login</a>
+						<a class="btn btn-success" asp-area="" asp-controller="Auth" asp-action="Login">Login</a>
 					}
                 </div>
             </div>
         </nav>
     </header>
     <div >
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-3 overflow-hidden">
             @RenderBody()
         </main>
     </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2025 - company.G03.PL - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
